refactor: remove auditConfig from fetcher
